kubernetes/clusters/1276-core/databases/dbgate/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbgate
  namespace: databases
  labels:
    app.kubernetes.io/name: dbgate
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: dbgate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dbgate
    spec:
      containers:
        - name: dbgate
          image: dbgate/dbgate:5.6.4
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: workspace
              mountPath: /root/.dbgate
      volumes:
        - name: workspace
          persistentVolumeClaim:
            claimName: dbgate-workspace
