kubernetes/clusters/1276-core/databases/dbgate/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dbgate
  namespace: databases
  labels:
    app.kubernetes.io/name: dbgate
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: dbgate
