kubernetes/clusters/1276-core/databases/dbgate/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dbgate
  namespace: databases
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - dbgate.kian.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dbgate
          port: 3000
